[package]
name = "forgex-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19"
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
http = "1"